--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Norgren || Designs</title>
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,20 +13,27 @@
 <body>
 	<header>
         <nav>
-        	<a href="index.html"><img src="img/logo.png" class="index-img">
-            <h1 class="text-logo">Norgren Designs</h1></a>
+        	<div id="logo-wrap">
+                <a href="index.html">
+                <!-- <img src="img/logo.png" class="index-img small"> -->
+                <img src="img/logo_grey.png" class="index-img big">
+                <h1 class="text-logo">Norgren Designs</h1></a>
+            </div>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <span class="nav-line"></span>
         </nav>    
     </header>
     
-    <div class="index-wrap">
+    <div class="index-wrap wrap-bg main-pad">
         <section>
         	<h1 class="banner-header">Inspired Design</h1>
-            <p>Some text about why ND is so badass.</p>
+            <p>Bacon ipsum dolor amet spare ribs doner cow beef ribs, pork swine porchetta landjaeger fatback ground round andouille ham tail meatball. Andouille bacon chuck cow. Ribeye sirloin filet mignon bacon hamburger shankle chuck landjaeger drumstick andouille chicken shoulder ball tip tail. Capicola ribeye pastrami cow prosciutto tail. Biltong ground round meatloaf tail, tri-tip strip steak ham hock shoulder. Short loin filet mignon hamburger jowl andouille, jerky pig ball tip drumstick.</p>
+
+<p>Leberkas turducken prosciutto, salami capicola kevin corned beef ground round meatball. Ground round shankle sirloin meatball beef beef ribs tail tri-tip, brisket sausage strip steak salami. Bacon boudin flank cow tri-tip. Ham pig flank, jowl frankfurter kevin biltong meatball corned beef kielbasa tongue tri-tip turducken landjaeger jerky.</p>
         </section>
     </div>
     
