Responsive update with some nav changes.
Mostly updating the styles and assigning media queries. Some cleanup of
the nav sections. Also created several new classes to cleanup style
lists.

--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,12 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap">
+        	<div id="logo-wrap center">
                 <a href="index.html">
-                <!-- <img src="img/logo.png" class="index-img small"> -->
-                <img src="img/logo_grey.png" class="index-img big">
+                <img src="img/logo_grey.png" class="index-img big center">
                 <h1 class="text-logo">Norgren Designs</h1></a>
             </div>
-            <ul>
+            <ul class="txt-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
@@ -30,7 +29,7 @@
     	<div class="wrap-bg">
             <div class="center main-pad wrap">
                     <form action="process.php" method="post" class="center">
-                        <h1>Contact Me</h1>
+                        <h1 class="txt-center">Contact Me</h1>
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="user_name" />
                         <label for="email">Email:</label>
