--- a/about.html
+++ b/about.html
@@ -13,13 +13,12 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap">
+        	<div id="logo-wrap center">
                 <a href="index.html">
-                <!-- <img src="img/logo.png" class="index-img small"> -->
-                <img src="img/logo_grey.png" class="index-img big">
+                <img src="img/logo_grey.png" class="index-img big center">
                 <h1 class="text-logo">Norgren Designs</h1></a>
             </div>
-            <ul>
+            <ul class="txt-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -30,7 +29,7 @@
     <div class="index-wrap main-pad wrap-bg">
     	<!-- <img src="img/erik.jpg" class="about-img cf"> -->
     	<section class="content-section">
-            <h1>About Erik Norgren</h1>
+            <h1 class="txt-center">About Erik Norgren</h1>
             <p>Was founded on the principal of.... Lorem ipsum doloret sit amet.</p>
             <p>Was founded on the principal of.... Lorem ipsum doloret sit amet. Some more text goes in here to really space things out. After that there's a bit more writing to do, so here we go to really just give this some space in here.</p>
         </section>
