--- a/about.html
+++ b/about.html
@@ -13,15 +13,15 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap center">
+        	<div id="logo-wrap" class="center">
                 <a href="index.html">
                 <img src="img/logo_grey.png" class="index-img big center">
-                <h1 class="text-logo">Norgren Designs</h1></a>
+                <h1 class="text-logo center">Norgren Designs</h1></a>
             </div>
             <ul class="txt-center">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <span class="nav-line"></span>
         </nav>    
