--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap center">
+        	<div id="logo-wrap" class="center">
                 <a href="index.html">
                 <img src="img/logo_grey.png" class="index-img big center">
-                <h1 class="text-logo">Norgren Designs</h1></a>
+                <h1 class="text-logo center">Norgren Designs</h1></a>
             </div>
             <ul class="txt-center">
                 <li><a href="index.html">Home</a></li>
