First commit for mobile first rebuild
Rebuilt for the mobile first design of Norgren Designs.

--- a/about.html
+++ b/about.html
@@ -13,23 +13,23 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap" class="center">
+        	<div id="logo-wrap">
                 <a href="index.html">
-                <img src="img/logo_grey.png" class="index-img big center">
+                <img src="img/logo_grey.png">
                 <h1 class="text-logo center">Norgren Designs</h1></a>
             </div>
-            <ul class="txt-center">
+            <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="about.html"  class="active">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <span class="nav-line"></span>
         </nav>    
     </header>
-    <div class="index-wrap main-pad wrap-bg">
+    <div  class="wrap-bg">
     	<!-- <img src="img/erik.jpg" class="about-img cf"> -->
-    	<section class="content-section">
-            <h1 class="txt-center">About Erik Norgren</h1>
+    	<section>
+            <h1>About Erik Norgren</h1>
             <p>Was founded on the principal of.... Lorem ipsum doloret sit amet.</p>
             <p>Was founded on the principal of.... Lorem ipsum doloret sit amet. Some more text goes in here to really space things out. After that there's a bit more writing to do, so here we go to really just give this some space in here.</p>
         </section>
