--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap" class="center">
+        	<div id="logo-wrap">
                 <a href="index.html">
-                <img src="img/logo_grey.png" class="index-img big center">
-                <h1 class="text-logo center">Norgren Designs</h1></a>
+                <img src="img/logo_grey.png">
+                <h1>Norgren Designs</h1></a>
             </div>
-            <ul class="txt-center">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
@@ -27,9 +27,8 @@
         </nav>    
     </header>
     	<div class="wrap-bg">
-            <div class="center main-pad wrap">
-                    <form action="process.php" method="post" class="center">
-                        <h1 class="txt-center">Contact Me</h1>
+                    <form action="process.php" method="post">
+                        <h1>Contact Me</h1>
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="user_name" />
                         <label for="email">Email:</label>
@@ -38,7 +37,6 @@
                         <textarea id="comment" name="user_comment"></textarea>
                         <button type="submit" id="send">Send</button>
                     </form>
-            </div><!-- end wrap -->
         </div><!-- end index wrap -->
     
     <footer>
