--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <body>
 	<header>
         <nav>
-        	<div id="logo-wrap" class="center">
+        	<div id="logo-wrap">
                 <a href="index.html">
-                <img src="img/logo_grey.png" class="index-img big center">
-                <h1 class="text-logo center">Norgren Designs</h1></a>
+                <img src="img/logo_grey.png">
+                <h1>Norgren Designs</h1></a>
             </div>
-            <ul class="txt-center">
-                <li><a href="index.html">Home</a></li>
+            <ul>
+                <li><a href="index.html"  class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <span class="nav-line"></span>
         </nav>    
     </header>
     
-    <div class="index-wrap wrap-bg main-pad">
+    <div class="wrap-bg">
         <section>
-        	<h1 class="banner-header txt-center">Inspired Design</h1>
+        	<h1>Inspired Design</h1>
             <p>Bacon ipsum dolor amet spare ribs doner cow beef ribs, pork swine porchetta landjaeger fatback ground round andouille ham tail meatball. Andouille bacon chuck cow. Ribeye sirloin filet mignon bacon hamburger shankle chuck landjaeger drumstick andouille chicken shoulder ball tip tail. Capicola ribeye pastrami cow prosciutto tail. Biltong ground round meatloaf tail, tri-tip strip steak ham hock shoulder. Short loin filet mignon hamburger jowl andouille, jerky pig ball tip drumstick.</p>
 
 <p>Leberkas turducken prosciutto, salami capicola kevin corned beef ground round meatball. Ground round shankle sirloin meatball beef beef ribs tail tri-tip, brisket sausage strip steak salami. Bacon boudin flank cow tri-tip. Ham pig flank, jowl frankfurter kevin biltong meatball corned beef kielbasa tongue tri-tip turducken landjaeger jerky.</p>
