--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html"  class="active">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <span class="nav-line"></span>
@@ -37,6 +37,7 @@
     <footer>
     	<p>&copy; 2014 Norgren Designs</p>
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
