--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
     <footer>
     	<p>&copy; 2014 Norgren Designs</p>
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
