--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Norgren Designs</h1></a>
             </div>
             <ul>
-                <li><a href="index.html"  class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -37,6 +37,7 @@
     <footer>
     	<p>&copy; 2014 Norgren Designs</p>
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
