cleaning up some styles and updating classes

--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="center">
 	<header>
         <nav>
-        	<div id="logo-wrap">
+        	<div id="logo-wrap" class="center">
                 <a href="index.html">
-                <img src="img/logo_grey.png">
+                <img src="img/logo_grey.png" class="center">
                 <h1 class="text-logo center">Norgren Designs</h1></a>
             </div>
             <ul>
@@ -23,10 +23,10 @@
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <span class="nav-line"></span>
-        </nav>    
+            <span class="nav-line center"></span>
+        </nav>
     </header>
-    <div  class="wrap-bg">
+    <div  class="wrap-bg center">
     	<!-- <img src="img/erik.jpg" class="about-img cf"> -->
     	<section>
             <h1>About Erik Norgren</h1>
