--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="center">
 	<header>
         <nav>
-        	<div id="logo-wrap">
+        	<div id="logo-wrap" class="center">
                 <a href="index.html">
-                <img src="img/logo_grey.png">
+                <img src="img/logo_grey.png" class="center">
                 <h1>Norgren Designs</h1></a>
             </div>
             <ul>
@@ -23,10 +23,10 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
-            <span class="nav-line"></span>
-        </nav>    
+            <span class="nav-line center"></span>
+        </nav>
     </header>
-    	<div class="wrap-bg">
+    	<div class="wrap-bg center">
                     <form action="process.php" method="post">
                         <h1>Contact Me</h1>
                         <label for="name">Name:</label>
