--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="center">
 	<header>
         <nav>
-        	<div id="logo-wrap">
+        	<div id="logo-wrap" class="center">
                 <a href="index.html">
-                <img src="img/logo_grey.png">
+                <img src="img/logo_grey.png" class="center">
                 <h1>Norgren Designs</h1></a>
             </div>
             <ul>
@@ -23,17 +23,17 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <span class="nav-line"></span>
-        </nav>    
+            <span class="nav-line center"></span>
+        </nav>
     </header>
-    
-    <div class="wrap-bg">
+
+    <div class="wrap-bg center">
         <section>
         	<h1>Inspired Design</h1>
             <p>Bacon ipsum dolor amet spare ribs doner cow beef ribs, pork swine porchetta landjaeger fatback ground round andouille ham tail meatball. Andouille bacon chuck cow. Ribeye sirloin filet mignon bacon hamburger shankle chuck landjaeger drumstick andouille chicken shoulder ball tip tail. Capicola ribeye pastrami cow prosciutto tail. Biltong ground round meatloaf tail, tri-tip strip steak ham hock shoulder. Short loin filet mignon hamburger jowl andouille, jerky pig ball tip drumstick.</p>
         </section>
     </div>
-    
+
     <footer>
     	<p>&copy; 2014 Norgren Designs</p>
     </footer>
