--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
                         <h1>Contact Me</h1>
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="user_name" />
+                        <div id="reply"></div>
                         <label for="email">Email:</label>
                         <input type="text" id="email" name="user_email" />
                         <label for="comment">Message:</label>
