--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,10 @@
                         <div id="reply"></div>
                         <label for="email">Email:</label>
                         <input type="text" id="email" name="user_email" />
+                        <div class="reply"></div>
                         <label for="comment">Message:</label>
                         <textarea id="comment" name="user_comment"></textarea>
+                        <div class="reply"></div>
                         <button type="submit" id="send">Send</button>
                     </form>
                     <div class="confirm">
