--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,20 @@
     	<div class="wrap-bg center">
                     <form action="#" method="post" id="contact-form">
                         <h1>Contact Me</h1>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" />
-                        <label for="email">Email:</label>
-                        <input type="text" id="email" name="user_email" />
-                        <label for="comment">Message:</label>
-                        <textarea id="comment" name="user_comment"></textarea>
+                        <div id="nameWrap">
+                          <label for="name">Name:</label>
+                          <input type="text" id="name" name="user_name" /></br>
+                        </div>
+                        <div id="emailWrap">
+                          <label for="email">Email:</label>
+                          <input type="text" id="email" name="user_email" /></br>
+                        </div>
+                        <div id="commentWrap">
+                          <label for="comment">Message:</label>
+                          <textarea id="comment" name="user_comment"></textarea></br>
+                        </div>
                         <button type="submit" id="send">Send</button>
                     </form>
-                    <div class="confirm">
-                      <span class="valid-email">alert goes here</span>
-                      <span class="valid-comment"></span>
-                    </div>
         </div><!-- end index wrap -->
     <footer>
     	<p>&copy; 2014 Norgren Designs</p>
