Began building string and element maps for the page. I'm going to generate all the content on the page using DOM manipulation, clean this up into one single page along with several different html maps/modules. I'm also going to wipe out the styles on this page as I'm going to move everything over to a more relative based style, and I'm going to more closely define elements.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     </header>
 
     <div class="wrap-bg center">
-        <section>
+        <section id="homePageContent">
         	<h1>Inspired Design</h1>
-            <p>Bacon ipsum dolor amet spare ribs doner cow beef ribs, pork swine porchetta landjaeger fatback ground round andouille ham tail meatball. Andouille bacon chuck cow. Ribeye sirloin filet mignon bacon hamburger shankle chuck landjaeger drumstick andouille chicken shoulder ball tip tail. Capicola ribeye pastrami cow prosciutto tail. Biltong ground round meatloaf tail, tri-tip strip steak ham hock shoulder. Short loin filet mignon hamburger jowl andouille, jerky pig ball tip drumstick.</p>
+            <p></p>
+            <p></p>
         </section>
     </div>
 
