--- a/about.html
+++ b/about.html
@@ -28,10 +28,9 @@
     </header>
     <div  class="wrap-bg center">
     	<!-- <img src="img/erik.jpg" class="about-img cf"> -->
-    	<section>
+    	<section id="aboutPageContent">
             <h1>About Erik Norgren</h1>
-            <p>Was founded on the principal of.... Lorem ipsum doloret sit amet.</p>
-            <p>Was founded on the principal of.... Lorem ipsum doloret sit amet. Some more text goes in here to really space things out. After that there's a bit more writing to do, so here we go to really just give this some space in here.</p>
+            <p></p>
         </section>
     </div>
     <footer>
