--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,15 @@
                         <h1>Contact Me</h1>
                         <div id="nameWrap">
                           <label for="name">Name:</label>
-                          <input type="text" id="name" name="name" placeholder='Enter your name' pattern='[a-zA-Z]+' min='2' required></br>
+                          <input type="text" id="name" name="name" placeholder='Enter your name' pattern='[a-zA-Z]+' min='2' required>
                         </div>
                         <div id="emailWrap">
                           <label for="email">Email:</label>
-                          <input type="text" id="email" name="email" placeholder='example@gmail.com' required></br>
+                          <input type="text" id="email" name="email" placeholder='example@gmail.com' required>
                         </div>
                         <div id="commentWrap">
                           <label for="comment">Message:</label>
-                          <textarea id="comment" name="user_comment" required></textarea></br>
+                          <textarea id="comment" name="user_comment" required></textarea>
                         </div>
                         <button type="submit" id="send">Send</button>
                     </form>
