Added template layout styles based on earlier designs.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="center">
+<body>
 	<header id="globalHeader">
         <div id="logo-wrap" class="center">
             <a href="index.html" class="homeBtn">
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <div class="wrap-bg center">
+    <div id="contentSection">
         <section id="homePageContent">
         	<h1>Inspired Design</h1>
             <p></p>
