Added logo icon back in, some additional styles applied to the logo icon.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="contentSection">
         <section id="homePageContent">
         	<h1>Inspired Design</h1>
-            <p></p>
-            <p></p>
+            <p>First paragraph content goes here.</p>
+            <p>Second paragraph content goes here.</p>
         </section>
     </div>
 
