--- a/index.html
+++ b/index.html
@@ -10,34 +10,7 @@
 </head>
 
 <body>
-	<header id="globalHeader">
-        <div id="logo-wrap" class="center">
-            <a href="index.html" class="homeBtn">
-              <figure id="headerIcon" class="logo"></figure>
-              <h1>Norgren Designs</h1>
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <span class="nav-line center"></span>
-        </nav>
-    </header>
-
-    <div id="contentSection">
-        <section id="homePageContent">
-        	<h1>Inspired Design</h1>
-            <p>First paragraph content goes here.</p>
-            <p>Second paragraph content goes here.</p>
-        </section>
-    </div>
-
-    <footer>
-    	<p>&copy; 2015 Norgren Designs</p>
-    </footer>
+    <div id="nd"></div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
