Updating template and styles for the contact page. I'll ammend the contact page config map in script.js to generate this content.

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,17 @@
             <span class="nav-line center"></span>
         </nav>
     </header>
-    	<div class="wrap-bg center">
-                    <form action="process.php" method="post" id="contact-form">
+    <div id="contentSection">
+      <section id="contactPageContent">
+                  <section id="companyProfile">
+                    <div class="profileBox">
+                      <figure class="portrait"></figure>
+                      <h3>Name</h3>
+                      <p>Position at Norgren Design</p>
+                    </div>
+                  </section>
+                  <div id="modalWindow">
+                    <form action="#" method="post" id="contact-form">
                         <h1>Contact Me</h1>
                         <div id="nameWrap">
                           <label for="name">Name:</label>
@@ -43,7 +52,9 @@
                         </div>
                         <button type="submit" id="send">Send</button>
                     </form>
-        </div><!-- end index wrap -->
+                  </div><!-- end modalWindow -->
+        </section><!-- end index wrap -->
+    </div>
     <footer>
     	<p>&copy; 2015 Norgren Designs</p>
     </footer>
