Modified script to new markup for the contact/profiles section. Added styles as well.

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
                       <p>Position at Norgren Design</p>
                     </div>
                   </section>
-                  <div id="modalWindow">
+                  <button id="showContactContainer">Contact</button>
+                  <div id="contactContainer">
                     <form action="#" method="post" id="contact-form">
                         <h1>Contact Me</h1>
                         <div id="nameWrap">
