--- a/index.html
+++ b/index.html
@@ -68,23 +68,35 @@
                </article>
              </section>
           </section>
-          <section id='contactPageContent'>
-            <div id="contactContainer">
-              <form action="process.php" method="post" id="contact-form">
+          <section id='contactPageContent' ng-app="formApp">
+            <div id="contactContainer" ng-controller="formCtrl">
+              <form action="process.php" method="post" name="ndForm" novalidate ng-submit="addUser( newUser )" id="contact-form">
                 <h1>Contact Me</h1>
                 <div id="nameWrap">
-                  <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" placeholder="Enter your name" pattern="[a-zA-Z]+" min="2" required>
+                  <label for="userName">Name:</label>
+                  <input type="text" id="name" name="userName" placeholder="Enter your name" required ng-model="newUser.name">
+                  <div class="formError" ng-show="ndForm.userName.$invalid && ndForm.userName.$dirty">
+                    <span ng-show="ndForm.userName.$error.required">Please enter your name</span>
+                  </div>
+                  <!--  pattern="[a-zA-Z]+" min="2" -->
                 </div>
                 <div id="emailWrap">
-                  <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
+                  <label for="userEmail">Email:</label>
+                  <input type="email" id="email" name="userEmail" placeholder="example@gmail.com" required ng-model="newUser.email">
+                  <div class="formError" ng-show="ndForm.userEmail.$invalid && ndForm.userEmail.$dirty">
+                    <span ng-show="ndForm.userEmail.$error.email">Please enter a valid email</span>
+                    <span ng-show="ndForm.userEmail.$error.required">Please enter a value</span>
+                  </div>
                 </div>
                 <div id="commentWrap">
-                  <label for="comment">Message:</label>
-                  <textarea id="comment" name="user_comment" required></textarea>
+                  <label for="userComment">Message:</label>
+                  <textarea id="comment" name="userComment" required ng-model="newUser.msg"></textarea>
+                  <div class="formError" ng-show="ndForm.userMsg.$invalid && ndForm.userMsg.$dirty">
+                    <span ng-show="ndForm.userMsg.$error.required">Please include a message</span>
+                  </div>
                 </div>
-                <button type="submit" id="send" class="inactive">Send</button>
+                <button type="submit" id="send" ng-disabled="ndForm.$invalid">Send</button>
+                <!-- class="inactive" js function to switch manual validation states -->
               </form>
             </div>
           </section>
@@ -95,6 +107,8 @@
        </footer>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/formApp.js"></script>
 </body>
 </html>
