Added array image, which is fpo while building the array elements to scale with the page. Added model script as well as builder function to create the random distribution of classes on the figure elements.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <nav>
            <ul>
              <li><a href='#' class='active'>Home</a></li>
-             <li><a href='#'>About Erik</a></li>
+             <li><a href='#'>About</a></li>
              <li><a href='#'>Company</a></li>
              <li><a href='#'>Contact</a></li>
            </ul>
@@ -49,7 +49,8 @@
            <h2>Why?</h2>
            <p>Norgren Designs was founded by Erik Norgren as a platform to bring creative ideas to life. Inspired by organic form and function, Norgren Designs takes pride in its ability to create elegant solutions to the strictest design constraints and toughest functional challenges. Clients rely on our experience and knowledge to help design products that meet their goals quickly and efficiently. Let Norgren Designs help you with your next mechanical engineering design project.</p>
            <h2>Our design philosophy – An uncommon perspective.</h2>
-           <p>Engineering is often perceived as a dry, technical, numbers game, transforming ideas into products through mathematical tools and methods. Norgren Designs understands that wiz-bang 3D modeling, FEA, and other technical engineering practices are tools that can easily be wasted without a solid foundation on which to apply them. We value the highly creative stage in the design process that is often overlooked and undervalued. We excel at this creative stage by leveraging experience and intuition to quickly arrive at an optimal starting point. Any design can be optimized in a technical sense, but not every optimized design is an optimal solution. We focus on the creative stage up front to set your project up for success later. Our motto: Creativity, Quantified.</p>
+           <p>Engineering is often perceived as a dry, technical, numbers game, transforming ideas into products through mathematical tools and methods. Norgren Designs understands that wiz-bang 3D modeling, FEA, and other technical engineering practices are tools that can easily be wasted without a solid foundation on which to apply them. We value the highly creative stage in the design process that is often overlooked and undervalued. We excel at this creative stage by leveraging experience and intuition to quickly arrive at an optimal starting point. Any design can be optimized in a technical sense, but not every optimized design is an optimal solution. We focus on the creative stage up front to set your project up for success later.</p>
+           <h2>Our motto: Creativity, Quantified.</h2>
          </section>
          <section id='aboutPageContent'>
            <h2>About</h2>
@@ -103,13 +104,25 @@
           </section>
        </div>
        <div class='nav-background'></div>
+       <div class="background-array">
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+       </div>
        <footer>
          <p>&copy; 2015 Norgren Designs</p>
        </footer>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/nd.model.js"></script>
+    <script src="js/nd.js"></script>
     <script src="js/formApp.js"></script>
 </body>
 </html>
