Modified styles, cleaned up js file a bit as well.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          </div>
        </header>
        <div id='contentSection'>
-         <section id='homePageContent' class='show'>
+         <section id='homePageContent' class="show">
            <h2>Why?</h2>
            <p>Norgren Designs was founded by Erik Norgren as a platform to bring creative ideas to life. Inspired by organic form and function, Norgren Designs takes pride in its ability to create elegant solutions to the strictest design constraints and toughest functional challenges. Clients rely on our experience and knowledge to help design products that meet their goals quickly and efficiently. Let Norgren Designs help you with your next mechanical engineering design project.</p>
            <h2>Our design philosophy – An uncommon perspective.</h2>
