--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
          <section id='aboutPageContent'>
            <div class="profileBox">
              <figure class="portrait"></figure>
+             <div class="employeeDetails">
+               <h4>Erik Norgren</h4>
+               <p>Founder &amp; CEO</p>
+             </div>
            </div>
-           <h2>About</h2>
+           <!-- <h2>About</h2> -->
            <p>Erik comes from a family with multiple generations of creative engineers - engineering is in his blood. He has a Masters in Mechanical Engineering from the University of Colorado, Boulder, and 15+ years' experience designing mechatronic systems from the ground up. Robotics and mechanism design are his specialties. He has a proven ability to create successful products from primitive concepts. He enjoys rock climbing and hiking in his spare time.</p>
-           <p>I am continuously making progress on a handful of in-house development projects alongside client-based projects. Think think-tank meets technical competency. I am looking for creative minds to augment my mechanical engineering technical expertise. If you have an innate ability to do what you do, are self-motivated, and want to test your abilities in a new setting, I am interested in hearing from you.</p>
           </section>
           <section id='companyPageContent'>
               <section id="companyProfile">
