--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body ng-app="ndApp">
     <div id="nd">
       <header id='globalHeader'>
          <div id='logo-wrap' class='center'>
@@ -53,15 +53,21 @@
            <h2>Our motto: Creativity, Quantified.</h2>
          </section>
          <section id='aboutPageContent'>
-           <div class="profileBox">
-             <figure class="portrait"></figure>
-             <div class="employeeDetails">
-               <h4>Erik Norgren</h4>
-               <p>Founder &amp; CEO</p>
+           <div class="page-wrap" ng-controller="employeeCtrl">
+
+             <div class="row" ng-repeat="employee in employees">
+               <div class="profileBox">
+                 <figure class="portrait" ng-class="employee.class"></figure>
+                 <div class="employeeDetails">
+                   <h4>{{employee.name}}</h4>
+                   <p>{{employee.title}}</p>
+                 </div>
+               </div>
+               <p>{{employee.bio}}</p>
+               <span class="row-separator"></span>
              </div>
+
            </div>
-           <!-- <h2>About</h2> -->
-           <p>Erik comes from a family with multiple generations of creative engineers - engineering is in his blood. He has a Masters in Mechanical Engineering from the University of Colorado, Boulder, and 15+ years' experience designing mechatronic systems from the ground up. Robotics and mechanism design are his specialties. He has a proven ability to create successful products from primitive concepts. He enjoys rock climbing and hiking in his spare time.</p>
           </section>
           <section id='companyPageContent'>
               <section id="companyProfile">
@@ -81,7 +87,7 @@
                 </article>
              </section>
           </section>
-          <section id='contactPageContent' ng-app="formApp">
+          <section id='contactPageContent'>
             <div id="contactContainer" ng-controller="formCtrl">
               <form action="process.php" method="post" name="ndForm" novalidate ng-submit="addUser( newUser )" id="contact-form">
                 <h3>Have a project? Need Expert&nbsp;Advice? Contact&nbsp;Us.</h3>
@@ -134,6 +140,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/nd.model.js"></script>
     <script src="js/nd.js"></script>
-    <script src="js/formApp.js"></script>
+    <script src="js/ndApp.js"></script>
 </body>
 </html>
