Moved all contact page logic into its own module.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/nd.model.js"></script>
+    <script src="js/nd.contact.js"></script>
     <script src="js/nd.js"></script>
     <script src="js/ndApp.js"></script>
 </body>
