Made style fixes and markup adjustments. Switched background-array section to be nested above the content section, which allows for appropriate footer placement to be placed after the background array.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
            <ul>
              <li><a href='#' class='active'>Home</a></li>
              <li><a href='#'>About</a></li>
-             <li><a href='#'>Company</a></li>
+             <li><a href='#'>Services</a></li>
              <li><a href='#'>Contact</a></li>
            </ul>
          </nav>
          <div id='mobileNav'>
            <button id='mobileNavBtn'>
              <svg version="1.1" id="menu-bar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"' +
-               'viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+               'viewBox="0 0 0 0" enable-background="new 0 0 0 0" xml:space="preserve">
              <path class="bar" fill="#222222" d="M36.5,11.7h-33C2.7,11.7,2,11,2,10.2v0c0-0.8,0.7-1.5,1.5-1.5h33c0.8,0,1.5,0.7,1.5,1.5v0C38,11,37.3,11.7,36.5,11.7z"/>
              <path class="bar" fill="#222222" d="M36.5,21.7h-33C2.7,21.7,2,21,2,20.2v0c0-0.8,0.7-1.5,1.5-1.5h33c0.8,0,1.5,0.7,1.5,1.5v0C38,21,37.3,21.7,36.5,21.7z"/>
              <path class="bar" fill="#222222" d="M36.5,31.7h-33C2.7,31.7,2,31,2,30.2v0c0-0.8,0.7-1.5,1.5-1.5h33c0.8,0,1.5,0.7,1.5,1.5v0C38,31,37.3,31.7,36.5,31.7z"/>
@@ -38,12 +38,25 @@
              <ul>
                <li><a href='#' class='active'>Home</a></li>
                <li><a href='#'>About</a></li>
-               <li><a href='#'>Company</a></li>
+               <li><a href='#'>Services</a></li>
                <li><a href='#'>Contact</a></li>
              </ul>
            </nav>
          </div>
        </header>
+
+       <div class="background-array">
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+         <figure></figure>
+       </div>
+
        <div id='contentSection'>
          <section id='homePageContent' class="show">
            <h2>Why?</h2>
@@ -121,22 +134,11 @@
             </div>
           </section>
        </div>
-       <div class="background-array">
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-       </div>
        <div class='nav-background'></div>
-       <footer>
-         <p class="copy-footer">&copy; 2015 Norgren Designs</p>
-       </footer>
     </div>
+    <footer>
+      <p class="copy-footer">&copy; 2015 Norgren Designs</p>
+    </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/nd.model.js"></script>
