Made content updates per Erik's request.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
          <section id='homePageContent' class="show">
            <h2>Why?</h2>
            <p>Norgren Designs was founded by Erik Norgren as a platform to bring creative ideas to life. Inspired by organic form and function, Norgren Designs takes pride in its ability to create elegant solutions to the strictest design constraints and toughest functional challenges. Clients rely on our experience and knowledge to help design products that meet their goals quickly and efficiently. Let Norgren Designs help you with your next mechanical engineering design project.</p>
-           <h2>Our design philosophy – An uncommon perspective.</h2>
-           <p>Engineering is often perceived as a dry, technical, numbers game, transforming ideas into products through mathematical tools and methods. Norgren Designs understands that wiz-bang 3D modeling, FEA, and other technical engineering practices are tools that can easily be wasted without a solid foundation on which to apply them. We value the highly creative stage in the design process that is often overlooked and undervalued. We excel at this creative stage by leveraging experience and intuition to quickly arrive at an optimal starting point. Any design can be optimized in a technical sense, but not every optimized design is an optimal solution. We focus on the creative stage up front to set your project up for success later.</p>
-           <h2>Our motto: Creativity, Quantified.</h2>
+           <h2>Our Design Philosophy – An Uncommon Perspective.</h2>
+           <p>Engineering is often perceived as a dry, technical, numbers game, transforming ideas into products through mathematical tools and methods. Norgren Designs understands that 3D modeling, FEA, and other technical engineering practices are tools that can easily be wasted without a solid foundation on which to apply them. We value the highly creative stage in the design process that is often overlooked and undervalued. We excel at this creative stage by leveraging experience and intuition to quickly arrive at an optimal starting point. Any design can be optimized in a technical sense, but not every optimized design is an optimal solution. We focus on the creative stage up front to set your project up for success later.</p>
+           <h2>Our Motto: Creativity, Quantified.</h2>
          </section>
 
          <section id='aboutPageContent'>
@@ -104,7 +104,7 @@
           <section id='contactPageContent'>
             <div id="contactContainer" ng-controller="formCtrl">
               <form action="process.php" method="post" name="ndForm" novalidate ng-submit="addUser( newUser )" id="contact-form">
-                <h3>Have a project? Need Expert&nbsp;Advice? Contact&nbsp;Us.</h3>
+                <h3>Have a project? Need expert&nbsp;advice? Contact&nbsp;us.</h3>
                 <div id="nameWrap">
                   <label for="userName">Name:</label>
                   <input type="text" id="name" name="userName" placeholder="Enter your name" required ng-model="newUser.name">
