--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
        </div>
 
        <div id='contentSection'>
-         <section id='homePageContent' class="show">
-           <h2>Why?</h2>
-           <p>Norgren Designs was founded by Erik Norgren as a platform to bring creative ideas to life. Inspired by organic form and function, Norgren Designs takes pride in its ability to create elegant solutions to the strictest design constraints and toughest functional challenges. Clients rely on our experience and knowledge to help design products that meet their goals quickly and efficiently. Let Norgren Designs help you with your next mechanical engineering design project.</p>
-           <h2>Our Design Philosophy – An Uncommon Perspective.</h2>
-           <p>Engineering is often perceived as a dry, technical, numbers game, transforming ideas into products through mathematical tools and methods. Norgren Designs understands that 3D modeling, FEA, and other technical engineering practices are tools that can easily be wasted without a solid foundation on which to apply them. We value the highly creative stage in the design process that is often overlooked and undervalued. We excel at this creative stage by leveraging experience and intuition to quickly arrive at an optimal starting point. Any design can be optimized in a technical sense, but not every optimized design is an optimal solution. We focus on the creative stage up front to set your project up for success later.</p>
+         <section id='homePageContent' class="show" ng-controller="homeCtrl">
+           <div ng-repeat="item in home">
+             <h2>{{item.heading}}</h2>
+             <p>{{item.content}}</p>
+           </div>
            <h2>Our Motto: Creativity, Quantified.</h2>
          </section>
 
@@ -137,11 +137,10 @@
        <div class='nav-background'></div>
     </div>
     <footer>
-      <p class="copy-footer">&copy; 2015 Norgren Designs</p>
+      <p class="copy-footer">&copy; <span></span> Norgren Designs</p>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/nd.model.js"></script>
     <script src="js/nd.contact.js"></script>
